# eval-starter-kit

./: .env.example  .gitignore  README.md  TODO.md  chat_client.py  config.py  eval.html  eval_config.py  eval_runner.py  eval_server.py  evaluator.py  graph-data.js  graph.html  graph.py  index.html  mcp_server.py  pyproject.toml  rag.py  runner.py  schemas.py  server.py  setup_logger.py  test_chat.py  test_embed.py  test_mcp.py  test_mcp_chat.py  test_rag_chat.py  util.py  yaml_utils.py
.cursor/rules/: beads.mdc
data/: embeddings-text-embedding-3-small.json
evals-consultant/results/: consultant-bedrock-nova-pro.yaml  consultant-openai-gpt-4o.yaml  (+2 more)
jobs/: consultant.yaml  engineer.yaml
microeval/: chat.py  chat_client.py  cli.py  evaluator.py  graph.py  llm.py  runner.py  schemas.py  server.py
prompts/: candidate-skills.txt
queries/: consultant.yaml  engineer.yaml
results/: consultant-bedrock-nova-pro.yaml  consultant-groq-llama-3.3-70b.yaml  consultant-ollama-llama3.2.yaml  consultant-openai-gpt-4o.yaml  consultant.yaml  engineer-bedrock-nova-pro.yaml  engineer-groq-llama-3.yaml  engineer.yaml
runs/: consultant-bedrock-nova-pro.yaml  consultant-groq-llama-3.3-70b.yaml  consultant-ollama-llama3.2.yaml  consultant-openai-gpt-4o.yaml  consultant.yaml  engineer-bedrock-nova-pro.yaml  engineer-groq-llama-3.3-70b.yaml  engineer-groq-llama-3.yaml  engineer-ollama-llama3.2.yaml  engineer-openai-gpt-4o.yaml  engineer.yaml
sample-evals/: consultant.yaml  engineer.yaml
tinyeval/: chat.py  cli.py  evaluator.py  graph.py  index.html  runner.py  schemas.py  server.py
(+16 files in other folders)
