[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tinyeval"
version = "0.1.0"
description = "Minimal evaluation framework"
readme = "README.md"
requires-python = ">=3.13"
package-mode = true
dependencies = [
    "openai>=1.0.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.35.0",
    "ollama>=0.5.1",
    "path>=17.1.0",
    "fastapi>=0.116.1",
    "pyyaml>=6.0.2",
    "rich>=14.1.0",
    "boto3>=1.35.0",
    "aioboto3>=15.2.0",
    "groq>=0.14.0",
    "typer>=0.12.0",
]

[project.scripts]
tinyeval = "tinyeval.cli:main"

